--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,9 @@ body {
 .search {
   display: grid;
   grid-template-columns: 250px auto;
-  grid-template-rows: auto;
-  grid-template-areas: 'sidebar topbar '
+  grid-template-areas:
     'sidebar results'
-
-  ;
-}
-
-.search .topbar {
-  grid-area: topbar;
+    'sidebar results';
 }
 
 .search .sidebar {
